<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS World Cow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="botaoAtivar">Ativar</string>
    <string name="botaoAbout">Sobre</string>
    <string name="botaoVideoInternet">Video Internet</string>
    <string name="botaoSair">Sair</string>
    <string name="botaoGPS">GPS</string>
    <string name="botaoStatusGPS">Verificar</string>
    <string name="textviewLatitude">Latitude</string>
    <string name="textviewLongitude">Longitude</string>
    <string name="textviewAltitude">Altitude</string>
    <string name="textviewSatelitesVisiveis">Satelites Visiveis</string>
    <string name="textviewSatelitesEmUso">Satelites em Uso</string>
    <string name="textviewSatelitesVisiveisPRN">PRN dos SatelitesVisiveis</string>
    <string name="botaoGoogleMap">Navegação On-Line</string>
    <string name="botaoAtivarGPS">Ativar</string>
    <string name="botaoGraficoBasico">Basico</string>
    <string name="botaoGraficoAvancado">Avançado</string>
    <string name="botaoBulsola">Bulsola</string>
    <string name="botaoOpenStreetMap">Navegação Off-Line</string>
    <string name="satelites_visiveis">Satelites Visiveis:</string>
    <string name="satelites_usados_google_maps">Satelites Usados:</string>
    <string name="text_view_prn_usado_google_map">PRNs:</string>
    <string name="botaonLog">GPS Log</string>
    <string name="text_view_latitude_googl_map">latitude:</string>
    <string name="text_view_longitude_google_map">Longitude:</string>
    <string name="text_view_altitude_google_map">Altitude:</string>
    <string name="large_text_welcome">GPS World</string>
    <string name="text_view_about_autores">Desenvolvido p</string>
    <string name="mapa_manoel_dias">Mapa Manoel Dias</string>
    <string name="botao_zoom_out">Zoom Out</string>
    <string name="botao_zoom_in">"Zoom In "</string>
    <string name="open_street_map_cow">Open Street Map Cow</string>
    <string name="botao_log_salvar">Salvar</string>
    <string name="text_view_atividades"></string>	
    
</resources>
