<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF" 
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/textviewLatitude" />

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewLongitude" />

        <TextView
            android:id="@+id/textViewAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewAltitude" />

        <TextView
            android:id="@+id/textViewSatelitesVisiveis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewSatelitesVisiveis" />

        <TextView
            android:id="@+id/textViewSatelitesEmUso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewSatelitesEmUso" />

        <TextView
            android:id="@+id/textViewPRNSatelitesVisiveis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textviewSatelitesVisiveisPRN" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#000000"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/botaoStatusGPS" />
    </LinearLayout>

</LinearLayout>