<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:background="#f2f3f4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    
    >

    <LinearLayout
        android:background="#000000"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
        android:id="@+id/botaoVideoGPS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/botaoGPS" />

        <Button
            android:id="@+id/botaoGoogleMap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/botaoGoogleMap" />
        
        <Button
        android:id="@+id/botaoVideoInternet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/botaoVideoInternet" />

    	<Button
        android:id="@+id/botaoVideoSobre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/botaoAbout" />

    	<Button
    	android:id="@+id/botaoVideoSair"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/botaoSair" />
        
    </LinearLayout>

    
</LinearLayout>
