<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/id_fragment_google_map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewSatelitesVisiveis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#77FF0000"
        android:text="@string/satelites_visiveis"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="#42C920"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textViewSatelitesUsados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="#77FF0000"
        android:layout_below="@+id/textViewSatelitesVisiveis"
        android:textColor="#42C920"
        android:text="@string/satelites_usados_google_maps"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textViewPRNUsados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textViewSatelitesUsados"
        android:layout_below="@+id/textViewSatelitesUsados"
        android:background="#77FF0000"
        android:text="@string/text_view_prn_usado_google_map"
        android:textColor="#42C920" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPRNUsados"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="84dp"
        android:layout_toRightOf="@+id/textViewPRNUsados"
        android:text="TextView" />

</RelativeLayout>